--- a/src/sofa_imitation/conf/hydra/launcher/gpu_4_a100.yaml
+++ b/src/sofa_imitation/conf/hydra/launcher/gpu_4_a100.yaml
@@ -8,5 +8,6 @@ mem_gb: 500
 nodes: 1
 name: ${hydra.job.name}
 _target_: hydra_plugins.hydra_submitit_launcher.submitit_launcher.SlurmLauncher
-partition: dev_gpu_4_a100
+partition: gpu_4_a100
 gres: gpu:1
+
