--- a/src/sofa_imitation/conf/hyperparameter/default_hyperparam.yaml
+++ b/src/sofa_imitation/conf/hyperparameter/default_hyperparam.yaml
@@ -1,6 +1,6 @@
-batch_size: 128
+batch_size: 512
 learning_rate: 1e-4
 number_trajectories: 500
-number_epochs: 3
-use_color: false
-evaluate: true
+number_epochs: -1
+use_color: true
+number_evaluations: 20
