--- a/src/sofa_imitation/conf/hyperparameter/local_hp.yaml
+++ b/src/sofa_imitation/conf/hyperparameter/local_hp.yaml
@@ -2,7 +2,7 @@ defaults:
   - default_hyperparam
 
 batch_size: 128
-learning_rate: "lambda epoch: 1e-3 * 0.99 ** epoch"
-number_trajectories: 2
-number_epochs: 5
+learning_rate: 1e-4
+number_trajectories: 10
+number_epochs: 20
 number_evaluations: 2
