change default env to rope_cutting

--- a/src/sofa_imitation/conf/local.yaml
+++ b/src/sofa_imitation/conf/local.yaml
@@ -1,6 +1,6 @@
 defaults:
   - hyperparameter: local_hp
-  - env: ligating_loop
+  - env: rope_cutting
   - override hydra/launcher: submitit_local
   - _self_
 
