--- a/src/sofa_imitation/conf/local_AIRL.yaml
+++ b/src/sofa_imitation/conf/local_AIRL.yaml
@@ -1,5 +1,5 @@
 defaults:
   - hyperparameter: local_hp_AIRL
-  - env: ligating_loop
+  - env: rope_cutting
   - override hydra/launcher: submitit_local
   - _self_
