--- a/src/sofa_imitation/conf/slurm.yaml
+++ b/src/sofa_imitation/conf/slurm.yaml
@@ -1,6 +1,6 @@
 defaults:
   - hyperparameter: default_hyperparam
-  - env: ligating_loop
+  - env: rope_cutting
   - override hydra/launcher: gpu_8
   - _self_
 
