--- a/src/sofa_imitation/conf/slurm_AIRL.yaml
+++ b/src/sofa_imitation/conf/slurm_AIRL.yaml
@@ -1,5 +1,5 @@
 defaults:
   - hyperparameter: slurm_hp_AIRL
-  - env: ligating_loop
+  - env: rope_cutting
   - override hydra/launcher: gpu_8
   - _self_
